# aoc2023rust

./: .gitignore  Cargo.toml  README.md  download-data.sh
src/: aoc_fetcher.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  main.rs  table.rs  utils.rs  y2023.rs
src/utils/: astar.rs
src/y2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
