[package]
name = "aoc2023rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
itertools = "0.12.0"
lazy-regex = "3.1.0"
lazy_static = "1.4.0"
num = "0.4.1"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
