[package]
name = "aoc2023rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.0"
dirs = "5.0.1"
grid = "0.12.0"
hashbrown = { version = "0.14.3", features = ["rayon"] }
itertools = "0.12.0"
lazy-regex = "3.1.0"
lazy_static = "1.4.0"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
