[package]
name = "aoc2023rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = { version = "4.4.11", features = ["derive"] }
comfy-table = "7.1.0"
derivative = "2.2.0"
dirs = "5.0.1"
grid = "0.12.0"
hashbrown = { version = "0.14.3", features = ["rayon"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
lazy-regex = "3.1.0"
lazy_static = "1.4.0"
nd_vec = "0.4.0"
num = "0.4.1"
par-dfs = { version = "0.0.7", features = ["sync"] }
petgraph = { version = "0.6.4", features = ["all"] }
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
